add plugin recommendations for spell checker and todo tree

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,8 @@
         "hediet.vscode-drawio",
         "tamasfe.even-better-toml",
         "davidanson.vscode-markdownlint",
-        "rust-lang.rust-analyzer"
+        "rust-lang.rust-analyzer",
+        "streetsidesoftware.code-spell-checker",
+        "gruntfuggly.todo-tree"
     ]
 }
