--- a/winit/xtask/Cargo.toml
+++ b/winit/xtask/Cargo.toml
@@ -12,11 +12,7 @@ anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 regex-lite.workspace = true
-pico-args = { workspace = true, features = [
-    "eq-separator",
-    "short-space-opt",
-    "combined-flags",
-] }
+pico-args = { workspace = true, features = ["eq-separator", "short-space-opt", "combined-flags"] }
 xshell.workspace = true
 reqwest = { workspace = true, features = ["blocking"] }
 
