--- a/runtimes/python/wasm/Cargo.toml
+++ b/runtimes/python/wasm/Cargo.toml
@@ -12,10 +12,11 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 gam3du-framework-common.workspace = true
 gam3du-framework.workspace = true
-tracing.workspace = true
+runtime-python.workspace = true
 
+serde_json = { workspace = true, features = ["std"] }
+tracing.workspace = true
 # web-time.workspace = true
-# runtime-python.workspace = true
 # rustpython = { workspace = true, features = [] }
 # rustpython-vm.workspace = true
 # runtime-python-bindgen.workspace = true
