fix module loading

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,7 @@
         "setunadjusted",
         "spsc",
         "srgb",
+        "stdlib",
         "struct",
         "subsec",
         "subseconds",
