move JavaScript code into Rust

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,7 @@
         "wireframe",
         "xshell",
         "xtask",
+        "Deque",
         "Zeroable"
     ],
     "cSpell.ignorePaths": [
