--- a/applications/robot/Cargo.toml
+++ b/applications/robot/Cargo.toml
@@ -31,9 +31,10 @@ wasm-bindgen.workspace = true
 web-time.workspace = true
 rustpython.workspace = true
 rustpython-vm.workspace = true
-# js-sys.workspace = true
+web-sys = { workspace = true, features = ["MessagePort", "MessageEvent"] }
 # bincode.workspace = true
-wasm-rs-shared-channel = { workspace = true, features = ["serde", "serde-bincode"] }
+# wasm-rs-shared-channel = { workspace = true, features = ["serde", "serde-bincode"] }
+bincode.workspace = true
 
 [build-dependencies]
 gam3du-framework-common.workspace = true
