move all web crates into a separate workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,4 +97,8 @@
         100,
         120
     ],
+    "rust-analyzer.linkedProjects": [
+        "Cargo.toml",
+        "workspace-web/Cargo.toml"
+    ],
 }
