--- a/applications/robot/web/main/Cargo.toml
+++ b/applications/robot/web/main/Cargo.toml
@@ -1,4 +1,5 @@
 [package]
+workspace = "../../../../workspace-web"
 name = "application-robot-web-main"
 version = "0.1.0"
 edition.workspace = true
