--- a/applications/robot/web/runtime-python/Cargo.toml
+++ b/applications/robot/web/runtime-python/Cargo.toml
@@ -1,4 +1,5 @@
 [package]
+workspace = "../../../../workspace-web"
 name = "application-robot-web-runtime-python"
 description = "wasm module for Python runtimes to extend and control a gam3du engine"
 version.workspace = true
