partition all crates into target-specific workspaces to work around configuration limitations of rust-analyzer and cargo

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,3 @@
 [alias]
-xtask = "run --manifest-path xtask/Cargo.toml --"
+# TODO maybe just use run without alias? Update README then
+xtask = "run --"
