--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,6 +99,7 @@
     ],
     "rust-analyzer.linkedProjects": [
         "Cargo.toml",
-        "workspace-web/Cargo.toml"
+        "workspace-common/Cargo.toml",
+        "workspace-web/Cargo.toml",
     ],
 }
