--- a/runtimes/python/Cargo.toml
+++ b/runtimes/python/Cargo.toml
@@ -1,4 +1,5 @@
 [package]
+workspace = "../../workspace-common"
 name = "runtime-python"
 description = "Python runtimes to extend and control a gam3du engine"
 version.workspace = true
