--- a/runtimes/python/bindgen/Cargo.toml
+++ b/runtimes/python/bindgen/Cargo.toml
@@ -1,4 +1,5 @@
 [package]
+workspace = "../../../workspace-common"
 name = "runtime-python-bindgen"
 description = "Binding generators for Python runtimes"
 version.workspace = true
