--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,3 @@
 [alias]
-# TODO maybe just use run without alias? Update README then
-xtask = "run --"
+robot-web = "run -- robot-web"
+robot = "run -- robot"
