--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,7 +82,7 @@ wasm-rs-shared-channel = { version = "0.1", default-features = false }
 web-sys = { version = "0.3", default-features = false }
 web-time = { version = "1", default-features = false }
 wgpu = { version = "23", default-features = false }
-winit = { git = "https://github.com/rust-windowing/winit.git", rev = "3e9b80d47a9452b72e749a4890db23b92d65abc2", default-features = false, comment = "switch to the official version as soon as the new API becomes stabilized" }
+winit = { git = "https://github.com/rust-windowing/winit.git", rev = "3e9b80d47a9452b72e749a4890db23b92d65abc2", default-features = false, _comment = "switch to the official version as soon as the new API becomes stabilized" }
 xshell = { version = "0.2", default-features = false }
 
 # Compile all (non-workspace) dependencies with optimizations.
