update edition, dependencies and rust version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,7 @@
         "upcastable",
         "UVEC",
         "Vsync",
+        "vulkan",
         "wasmtime",
         "wayland",
         "wbindgen",
