--- a/applications/robot/native/Cargo.toml
+++ b/applications/robot/native/Cargo.toml
@@ -9,18 +9,19 @@ license-file.workspace = true
 
 [dependencies]
 application-robot.workspace = true
+engine-robot.workspace = true
 gam3du-framework-common.workspace = true
 gam3du-framework.workspace = true
-engine-robot.workspace = true
-runtime-python.workspace = true
-serde_json.workspace = true
-winit = { workspace = true, default-features = true }
-tracing.workspace = true
-# serde_json = { workspace = true, features = ["std"] }
-web-time.workspace = true
 lib-file-storage.workspace = true
-rustpython.workspace = true
+runtime-python.workspace = true
 rustpython-vm.workspace = true
+rustpython.workspace = true
+serde_json.workspace = true
+# serde_json = { workspace = true, features = ["std"] }
+tracing.workspace = true
+web-time.workspace = true
+wgpu = { workspace  = true, features = ["vulkan", "dx12", "metal"]}
+winit = { workspace = true, default-features = true }
 
 [lints]
 workspace = true
